# uva-computer-vision

./: .gitignore  LICENSE  README.md
assignment-1/: 1_1_1.fig  1_1_2.fig  1_1_5.fig  1_2_1.fig  1_5_1.fig  2_1_1.fig  5_1_1.fig  color_spaces.m  main.m  photometric_stereo.m
assignment-1/docs/: ch5.ppt
assignment-2/: gaussian.m  gaussianConv.m  gaussianDer.m
assignment-3/: gaussian.m  gaussianDer.m  harris.m  optical_flow.m  optical_flow_demo.m  tracking.m  tracking_demo.m
assignment-4/: image_alignment.m
assignment-5/: ICP.m  frame.m  icp_1_1.m  icp_test.m  main.m  merge_scenes_2_1.m  merge_scenes_2_2.m  readPcd.m  subsample.m  visualize.m
assignment-6/: ICP.m  draw_line.m  frame.m  fscatter3.m  interest_points.m  part1_1.m  part1_2.m  part1_3.m  ransac.m  skew.m  transformation_T.m  visualize.m
assignment-6/results/: house.fig  house_1.fig  house_2_point_cloud_merged.fig  house_2_point_cloud_merged_procrust.fig  point_view_matrix_with_prev_prev.fig  point_view_matrix_without_prev_prev.fig  teddy_bear.fig
final-project/: descriptor_file_name.m  extract_filemeta.m  extract_labels.m  extract_sift.m  feature_extraction.m  feature_folder_name.m  file_list.m  k_means.m  main.m  normalize.m  predict_SVMs.m  quantize.m  quantize_files.m  results_gray_kp_800_400_12_4_736417.613.html  results_opponent_dense_400_4000_12_4_736417.7089.html  results_opponent_dense_400_400_12_4_736417.6525.html  scale.m  stack_descriptors.m  train_SVMs.m
final_project_2/: CMakeLists.txt  main.cpp
final_project_2/Frame3D/: Frame3D.cpp  Frame3D.h
(+17 files in other folders)
